--- a/aws-auth-patch.yml
+++ b/aws-auth-patch.yml
@@ -6,6 +6,10 @@ data:
       - system:nodes
       rolearn: arn:aws:iam::234353605762:role/UdacityFlaskDeployCBKubectlRole
       username: system:node:{{EC2PrivateDNSName}}
+    - groups:
+      - system:masters
+      rolearn: arn:aws:iam::234353605762:role/UdacityFlaskDeployCBKubectlRole
+      username: build
   mapUsers: |
     []
 kind: ConfigMap
@@ -13,6 +17,6 @@ metadata:
   creationTimestamp: "2020-09-26T12:36:45Z"
   name: aws-auth
   namespace: kube-system
-  resourceVersion: "1429"
+  resourceVersion: "35369"
   selfLink: /api/v1/namespaces/kube-system/configmaps/aws-auth
   uid: 3710779d-bca4-42d6-bd45-a51c2e7fbd17
