--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,21 +7,13 @@ phases:
     runtime-versions:
       python: 3.7
     commands:
-      - rm -rf /var/run/docker.pid
-      - echo 'about to call dockerd'
-      - nohup /usr/local/bin/dockerd --host=unix:///var/run/docker.sock --host=tcp://127.0.0.1:2375 --storage-driver=overlay2&
-      - timeout 15 sh -c "until docker info; do echo .; sleep 1; done"
       - curl -sS -o aws-iam-authenticator https://amazon-eks.s3.us-west-2.amazonaws.com/1.17.9/2020-08-04/bin/linux/amd64/aws-iam-authenticator
       # Get latest stable release kubectl
       #- curl -LO https://storage.googleapis.com/kubernetes-release/release/`curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt`/bin/linux/amd64/kubectl
         # Command for specific kubectl version:
       - curl -sS -o kubectl https://amazon-eks.s3.us-west-2.amazonaws.com/1.17.9/2020-08-04/bin/linux/amd64/kubectl
       - chmod +x ./kubectl ./aws-iam-authenticator
-      - mkdir -p $HOME/bin && cp ./aws-iam-authenticator $HOME/bin/aws-iam-authenticator && export PATH=$PATH:$HOME/bin
-      - echo `export PATH=$PATH:$HOME/bin` >> ~/.bashrc
-      - echo `aws-iam-authenticator help`
-      - mkdir -p $HOME/bin && cp ./kubectl $HOME/bin/kubectl && export PATH=$PATH:$HOME/bin
-      - echo `export PATH=$PATH:$HOME/bin` >> ~/.bashrc
+      - export PATH=$PWD/:$PATH
       - echo `kubectl version`
       - python -m pip install --upgrade --force pip
       - apt-get update && apt-get -y install jq  && pip install --upgrade awscli
